<?xml version="1.0"?>
<package>
  <name>adafruit_drivers</name>
  <version>1.0.0</version>
  <description>The adafruit_drivers package</description>
 
  <maintainer email="yershov@mit.edu">Dmitry Yershov</maintainer>
  <maintainer email="syliu@mit.edu">Shih-Yuan Liu</maintainer>

  <license>GPLv3</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
