<?xml version="1.0"?>
<package>
  <name>car_supervisor</name>
  <version>1.0.0</version>
  <description>The car_supervisor package for duckietown.</description>

  <license>GPLv3</license>

  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
