<?xml version="1.0"?>
<package>
  <name>duckietown_logs</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `duckietown_logs` in `package.xml`.</description>

  <maintainer email="acensi@idsc.mavt.ethz.ch">Andrea Censi</maintainer>


  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

</package>
