<?xml version="1.0"?>
<package>
  <name>duckietown_logs</name>
  <version>1.0.0</version>
  <description>
Package to create videos from ROS logs.

  </description>

  <maintainer email="acensi@idsc.mavt.ethz.ch">Andrea Censi</maintainer>


  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

</package>
