<?xml version="1.0"?>
<package>
  <name>intersection_navigation</name>
  <version>1.0.0</version>
  <description>A node that navigates a Duckiebot across an intersection.</description>

  <author email="bdario@ethz.ch">Dario Brescianini</author> 
  <maintainer email="bdario@ethz.ch">Dario Brescianini</maintainer>


  <license>GPLv3</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
