<?xml version="1.0"?>
<package>
  <name>mdoap</name>
  <version>1.0.0</version>
  <description>The mdoap package which handles object recognition and uses ground projection to estimate distances of objects for duckie safety. Also contains controllers for avoiding said obstacles</description>

  <author email="catliu@mit.edu">Catherine Liu</author>
  <author email="sacepi@gmail.com">Sam</author>
  <author email="anders.ariel@gmail.com">Ari</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


</package>
