<?xml version="1.0"?>
<package>
  <name>traffic_light</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `traffic_light` in `package.xml`.</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>rgb_led</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>rgb_led</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

 
</package>
